# database_og

./: CMakeLists.txt  README.md  main.cpp
DDL/: DDL.cpp  DDL.h  DDL_CREATE.cpp  DDL_DROP.cpp  DDL_structures.h
DML/: DML.cpp  DML.h
DQL/: DQL.cpp  DQL.h  DQL_structures.h
DQL/Misc/: Where_STATEMENT.cpp
Databases/: database.cpp  database.h  database_creator.cpp  database_methods.cpp  database_reader.cpp  database_structures.h
Misc/: app.cpp  app.h
query/: query.cpp  query.h  query_structures.h
query/Misc/: Where_STATEMENT.cpp  Where_STATEMENT.h
